# usefulalgorithm

./: .gitignore  CODEOWNERS  README.md  pyproject.toml
.github/workflows/: deploy.yml
scripts/: check_hardcover.py  check_spotify.py  generate_readme.py
scripts/templates/: README.md.j2
