[tool.poetry]
name = "usefulalgorithm"
version = "0.1.0"
description = "My profile and stuff"
authors = ["Tsung-Ju Lii <usefulalglorithm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
spotipy = "^2.24.0"
loguru = "^0.7.3"
python-dotenv = "^1.0.1"
jinja2 = "^3.1.5"
gql = "^3.5.0"
httpx = "^0.28.1"
pydantic = "^2.10.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
